@@ -1,5 +1,7 @@
 * V1.55.2.1
   * fixed minor API typo
+  * improvements from Arm to 2 CK modules: platform.cpu and platform.gpu:
+    https://github.com/ctuning/ck-env/pull/113
 
 * V1.55.2
   * removed two outdated modules
